<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="connection_info">Connection Info</string>
    <string name="authentication">Authentication</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="ssl">SSL</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="upload">Upload</string>
    <string name="up_a_level">Up a level</string>
    <string name="no_items">No Items</string>
    <string name="error">Error</string>
    <string name="upload_files">Upload Files</string>
    <string name="home">Home</string>
    <string name="create_server">Create Server</string>
    <string name="file_icon">File Icon</string>
    <string name="confirm_delete">Are you sure you want to delete this server?</string>
    <string name="confirm_cancel">Would you really like to cancel uploading?</string>
    <string name="finish_confirm_cancel">Files are uploading, are you sure you want to quit and cancel them?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="or">or</string>
    <string name="name">Name</string>
    <string name="download">Download</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="insufficient_info">Insufficient Info</string>
    <string name="a_name_is_required">A name is required to save a site.</string>
    <string name="no_servers">No saved servers.\nConnect to one from the options menu.</string>

    <string name="download_as_zip">Download as ZIP</string>
    <string name="refresh">Refresh</string>
    <string name="exit">Exit to Server List</string>

    <string name="use_master_password">Use Master Password</string>
    <string name="change_master_password">Change Master Password</string>
    <string name="preferences">Preferences</string>
    <string name="advanced_options">Advanced Options</string>

    <string name="current_password">Current Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="unlock">Unlock</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="sort_folders_first">Sort Folders First</string>

    <string name="donate">Donate</string>
    <string name="download_complete">Download complete.</string>
    <string name="ask_for_pass_on_resume">Ask for pass on resume</string>
</resources>
